ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
======================================================================

* V1.22.11 - 
- System: Mouse position wasn't taking into account change of ORIGIN.

* V1.22.10 - 14 February 2021
- System: *Refresh OnError wasn't working correctly. Fixed.
- System: Added a fix reducing the likelihood of where a textfile BASIC
  program could be misinterpreted as a tokenised one.
- System: Implemented enough of SYS "OS_File" to hopefully be useful.
- System: SDL graphics in its own thread. MODE 7 now runs like a startled cat.
  As a bonus, we now have a flashing cursor too. The performance tweak call
  SYS "Brandy_RefreshInterval" has been removed.
- System: MODE 7 is now fast enough that VDU 23,18,1 is a no-op.
- Graphics: New ellipse drawing code. Based on RISC OS ARM implementation,
  translated to C by hoglet@Stardot for PiTubeDirect.
- Graphics: Fix a crash where somehow PLOT generates negative offset values.
- BASIC: CLEAR now deallocates arrays (not memory blocks) allocated using
  DIM HIMEM.
- BASIC: CLEAR extended to allow CLEAR HIMEM [<array()>], which frees arrays
  (not memory blocks), but otherwise leaves variables untouched. Specifying
  which array will de-allocate only that array.  The array variable can
  subsequently be re-dimensioned using DIM [HIMEM].
- BASIC: DIM HIMEM can no longer attempt to create string arrays.
- BASIC: SWAP now works correctly on off-heap arrays.
- BASIC: Fixed a bug in array arithmetic on uint8 arrays
- BASIC: Implemented PTR(string$) and PTR(array()).
- BASIC: PTR#0 now returns 0 (in line with BBC BASIC 2-5, 1 unknown) rather
  than throwing an error. Note ARM BBC BASIC VI returns the temporary file
  number as per OS_Args 0,0 with zero meaning none in use.
- BASIC: Brandy internally used separate tokens for TIME and TIME$ meaning
  TI.$ couldn't be used as an abbreviation (and it confused the parser). The