@@ -81,8 +81,6 @@
 #endif
 #endif
 
-#define MAXSYSPARMS 10		/* Maximum number of parameters allowed in a 'SYS' statement */
-
 /*
 ** Define the operating system-specific types used for integer
 ** and floating point types in Basic. 32-bit integer (signed
@@ -398,5 +396,11 @@ typedef jmp_buf sigjmp_buf;
 #define FMT_SZX "%X"
 #define FMT_SZD "%u"
 #endif /* LP64 */
+
+#ifdef TARGET_RISCOS
+#define MAXSYSPARMS 10		/* Maximum number of parameters allowed in a 'SYS' statement */
+#else
+#define MAXSYSPARMS 16		/* Maximum number of parameters allowed in a 'SYS' statement */
+#endif
 
 #endif
